cabal-version:      3.0
name:               portfolio-risk-analyzer
version:            0.1.0.0
license:            BSD-3-Clause
maintainer:         shakyarupasinghe630@gmail.com
build-type:         Simple

executable portfolio-risk-analyzer
  main-is: Main.hs
  hs-source-dirs: .
  other-modules: DataTypes, Processing, IOHandler, Utils
  build-depends: base >=4.7 && <5, parallel, deepseq
  default-language: Haskell2010
